--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,8 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-table": "^7.8.0",
+    "react-to-print": "^2.15.1",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
