--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,10 @@
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.5",
+    "react-table": "^7.8.0",
     "request-ip": "^3.3.0",
     "socket.io": "^4.7.5",
+    "title-case": "^4.3.1",
     "ui": "^0.2.4",
     "uid": "^2.0.2"
   },
