--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://smarfee-server2.onrender.com/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
