--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "https://smarfee-cafeteria-server.vercel.app/",
+  "proxy": "http://localhost:5000/",
+  "homepage": "https://smarfee-client.vercel.app/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
